--- a/css/style.css
+++ b/css/style.css
@@ -1,161 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
 }
 
 body {
-    background-color: rgb(50, 50, 50);
+    background-image: url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     overflow: allow;
+    font-family: 'Poppins', sans-serif;
 }
 
-
-
-h1 {
-    color: white;
-}
-
-
-.trail {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background: #EF233C;
-    border-radius: 50%;
-    pointer-events: none;
-    animation: fadeOut 1s ease-out forwards;
-    z-index: 3; 
-}
-
-@keyframes fadeOut {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(0.5);
-        opacity: 0;
-    }
-}
-
-img {
-    width: 650px;
-}
-
-#name {
-    position: relative;
-    text-align: center;
-}
 
 /* NAVBAR */
-.socials {
-    background-color: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    position: absolute;
-    left: 47px;
-    bottom: 20px;
+.navbar {
+    background-color: black; 
+    padding: 0; 
+    margin: 0;
+    box-shadow: 1px 1px 5px rgb(70, 70, 70);
 }
 
 .navdiv {
-    border-bottom-left-radius: 20px;
-    padding-left: 20px;
-    margin-top: -20px;
-    padding: 30px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #2B2D42;
+    justify-content: flex-start; 
+    align-items: center; 
+    padding: 20px; 
 }
 
-li {
-    display: inline-block;
-    text-decoration: none;
+.navdiv ul {
+    margin: 0; 
+    display: flex;
+    margin-left: 800px;
 }
 
-li a {
-    text-decoration: none;
-    position: relative;
-    right: 20px;
+.navdiv li {
+    margin-right: 20px; 
+}
+
+.navdiv a {
+    text-decoration: none; 
+    color: #EDF2F4; 
+    font-size: 15px; 
+    font-weight: bold; 
+    transition: transform 0.5s ease, color 0.3s ease; 
+}
+
+.navdiv a:hover {
+    color: gray;
+    transform: scale(1.1); 
+}
+
+/*Intro*/
+
+.intro h1 {
+    text-shadow: 2px 2px 3px gray;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 130px;
+    text-align: center;
+    color: white;
+    font-size: 43px;
+}
+
+.intro .a p {
+    text-shadow: 2px 2px 3px gray;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
     color: white;
     font-size: 23px;
-    font-weight: bold;
-    margin-right: 25px;
-    transition: transform .5s ease;
 }
 
-a:before, a:after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 1px;
-    top: 50%;
-    margin-top: -0.5px;
-    background: #fff;
+.intro .b p {
+    text-shadow: 0px 0px 0px rgb(244, 244, 244);
+    margin-top: 20px;
+    text-align: center;
+    color: white;
+    font-size: 21px;
 }
 
-a:before {
-    left: -2.5px;
+.intro .c p  {
+    text-shadow: 0px 2px 3px rgb(0, 0, 0);
+    margin-top: 15px;
+    text-align: center;
+    color: white;
+    font-size: 19px;
 }
 
-a:after {
-    right: 2.5px;
-    background: #fff;
-    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
-
-a:hover:before {
-    background: #fff;
-    width: 100%;
-    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
-
-a:hover:after {
-    background: transparent;
-    width: 100%;
-    transition: 0s;
-}
-
-.navbar {
-    background-color: none;
-    font-family: "Comic Sans MS", cursive;
-    position: absolute;
-    top: 10px;
-    right: -20px;
-}
-
-.navdiv {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-li {
-    display: inline-block;
-    text-decoration: none;
-}
-
-li a {
-    text-decoration: none;
-    position: relative;
-    right: 20px;
-    color: #EDF2F4;
-    font-size: 17px;
-    font-weight: bold;
-    margin-right: 25px;
-    transition: transform .5s ease;
-}
 
 
 /* MEMBERS SECTION */
 .members-section {
     padding: 50px;
-    background-color: gray;
     text-align: center;
 }
 
 .members-section h2 {
-    margin-top: 30px;
+    margin-top: 250px;
     font-size: 28px;
-    color: #EF233C;
+    color: white;
     margin-bottom: 20px;
 }
 
@@ -169,7 +112,7 @@ li a {
 .member-card {
     width: 300px; 
     height: 300px;
-    background-color: #2B2D42;
+    background-color: beige;
     color: #EDF2F4;
     border-radius: 10px;
     padding: 20px;
@@ -193,11 +136,72 @@ li a {
 }
 
 .member-card h3 {
-    font-size: 20px;
+    color: black;
+    font-size: 12px;
     margin: 10px 0;
 }
 
 .member-card p {
     font-size: 16px;
+}
+
+/*Footer*/
+body{
+margin:0;
+overflow-x:hidden;
+}
+
+.footer{
+background:#000;
+padding:30px 0px;
+font-family: 'Play', sans-serif;
+text-align:center;
+}
+
+.footer .row{
+width:100%;
+margin:1% 0%;
+padding:0.6% 0%;
+color:gray;
+font-size:0.8em;
+}
+
+.footer .row a{
+text-decoration:none;
+color:gray;
+transition:0.5s;
+}
+
+.footer .row a:hover{
+color:#fff;
+}
+
+.footer .row ul{
+width:100%;
+}
+
+.footer .row ul li{
+display:inline-block;
+margin:0px 30px;
+}
+
+.footer .row a i{
+font-size:2em;
+margin:0% 1%;
+}
+    
+@media (max-width:720px){
+    .footer{
+    text-align:left;
+    padding:5%;
+    }
+    .footer .row ul li{
+    display:block;
+    margin:10px 0px;
+    text-align:left;
+    }
+    .footer .row a i{
+    margin:0% 3%;
+    }
 }
 
