--- a/css/pov.css
+++ b/css/pov.css
@@ -1,124 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
 }
 
 body {
-    background-color: #F9F9F9;
+    background-image: url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png);
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: allow;
+    font-family: 'Poppins', sans-serif;
 }
 
-
-
-h1 {
-    color: white;
+html {
+    scroll-behavior: smooth;
 }
 
-img {
-    width: 650px;
-}
-
-#name {
-    position: relative;
-    text-align: center;
-}
 
 /* NAVBAR */
-.socials {
-    background-color: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    position: absolute;
-    left: 47px;
-    bottom: 20px;
-}
-
-.navdiv {
-    border-bottom-left-radius: 20px;
-    padding-left: 20px;
-    margin-top: -20px;
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #2B2D42;
-}
-
-li {
-    display: inline-block;
-    text-decoration: none;
-}
-
-li a {
-    text-decoration: none;
-    position: relative;
-    right: 20px;
-    color: white;
-    font-size: 23px;
-    font-weight: bold;
-    margin-right: 25px;
-    transition: transform .5s ease;
-}
-
-a:before, a:after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 1px;
-    top: 50%;
-    margin-top: -0.5px;
-    background: #fff;
-}
-
-a:before {
-    left: -2.5px;
-}
-
-a:after {
-    right: 2.5px;
-    background: #fff;
-    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
-
-a:hover:before {
-    background: #fff;
-    width: 100%;
-    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
-
-a:hover:after {
-    background: transparent;
-    width: 100%;
-    transition: 0s;
-}
 
 .navbar {
-    background-color: none;
-    font-family: "Comic Sans MS", cursive;
-    position: absolute;
-    top: 10px;
-    right: -20px;
+    top: 0;
+    position: fixed;
+    display: flex;
+    justify-content: left;
+    background-color: black; 
+    padding-left: 3px;
+    margin: 0;
+    box-shadow: 1px 1px 5px rgb(70, 70, 70);
+    z-index: 1;
 }
 
 .navdiv {
+    padding: 20px; 
+}
+
+.navdiv ul {
+    margin: 0; 
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    margin-left: 800px;
 }
 
-li {
-    display: inline-block;
-    text-decoration: none;
+.navdiv li {
+    margin-right: 20px; 
 }
 
-li a {
-    text-decoration: none;
-    position: relative;
-    right: 20px;
-    color: #EDF2F4;
-    font-size: 17px;
-    font-weight: bold;
-    margin-right: 25px;
-    transition: transform .5s ease;
+.navdiv a {
+    text-decoration: none; 
+    color: #EDF2F4; 
+    font-size: 15px; 
+    font-weight: bold; 
+    transition: transform 0.5s ease, color 0.3s ease; 
+}
+
+.navdiv a:hover {
+    color: gray;
+    transform: scale(1.1); 
 }
