--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
@@ -24,10 +23,11 @@ html {
     top: 0;
     position: fixed;
     display: flex;
-    justify-content: left;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%; 
     background-color: black; 
-    padding-left: 3px;
-    margin: 0;
+    padding: 0 20px; 
     box-shadow: 1px 1px 5px rgb(70, 70, 70);
     z-index: 1;
 }
@@ -37,13 +37,16 @@ html {
 }
 
 .navdiv ul {
-    margin: 0; 
+    margin: 0;
     display: flex;
-    margin-left: 800px;
+    margin-left: auto; 
+    padding: 0; 
 }
+
 
 .navdiv li {
     margin-right: 20px; 
+    list-style: none;
 }
 
 .navdiv a {
