--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,8 @@
 }
 
 body {
-    background-image: url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png);
+    background-image: url(https://img-s-msn-com.akamaized.net/tenant/amp/entityid/BB1msKEu.img);
     background-size: cover;
-    background-repeat: no-repeat;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -45,7 +44,7 @@ html {
 
 
 .navdiv li {
-    margin-right: 20px; 
+    margin-right: 30px; 
     list-style: none;
 }
 
@@ -53,7 +52,6 @@ html {
     text-decoration: none; 
     color: #EDF2F4; 
     font-size: 15px; 
-    font-weight: bold; 
     transition: transform 0.5s ease, color 0.3s ease; 
 }
 
@@ -64,28 +62,37 @@ html {
 
 /*Intro*/
 
+.intro {
+    background: url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png) 
+    repeat fixed 100%;
+    background-size: cover;
+}
+
 .intro h1 {
     text-shadow: 2px 2px 3px gray;
     font-family: 'Poppins', sans-serif;
-    margin-top: 130px;
+    padding-top: 80px;
+    margin-top: 50px;
     text-align: center;
     color: white;
-    font-size: 43px;
+    font-size: 70px;
 }
 
 .intro .a p {   
+    letter-spacing: 2px;
     text-shadow:
     -1px  0   0 white;
     font-family: 'Poppins', sans-serif;
     text-align: center;
     color: white;
-    font-size: 23px;
+    font-size: 30px;
 }
 
 .intro .b p {
-    text-shadow: 0px 0px 0px rgb(244, 244, 244);
+    font-weight: bold;
     margin-top: 20px;
     text-align: center;
+    font-weight: bold;
     color: white;
     font-size: 21px;
 }
@@ -99,9 +106,7 @@ html {
 }
 
 .intro .d p:first-line {
-    text-shadow:
-    -1px  1px 0 white,
-    -1px  0   0 white;
+    font-weight: bold;
 }
 
 .intro .d p {
@@ -129,11 +134,11 @@ a.button {
     display: inline-block;
     text-align: center;
     cursor: pointer;
-    margin-bottom: 250px;
+    margin-bottom: 50px;
 }
 
 a.button:hover {
-    color: gray;
+    color: rgb(188, 188, 188);
 }
 
 /* MEMBERS */
@@ -190,6 +195,10 @@ a.button:hover {
 .member-card p {
     font-size: 16px;
 }
+
+/*FADE*/
+
+
 
 /*Footer*/
 body{
