--- a/css/plot.css
+++ b/css/plot.css
@@ -19,6 +19,13 @@ html {
 
 /* NAVBAR */
 
+html {
+    scroll-behavior: smooth;
+}
+
+
+/* NAVBAR */
+
 .navbar {
     top: 0;
     position: fixed;
@@ -45,7 +52,7 @@ html {
 
 
 .navdiv li {
-    margin-right: 20px; 
+    margin-right: 30px; 
     list-style: none;
 }
 
@@ -53,7 +60,6 @@ html {
     text-decoration: none; 
     color: #EDF2F4; 
     font-size: 15px; 
-    font-weight: bold; 
     transition: transform 0.5s ease, color 0.3s ease; 
 }
 
