--- a/css/characters.css
+++ b/css/characters.css
@@ -67,3 +67,103 @@ html {
     color: gray;
     transform: scale(1.1); 
 }
+
+/*CHRACTERS*/
+
+.team {
+    text-align: center;
+    padding: 20px;
+}
+
+.team h1 {
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.team-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+
+.team-member {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 50px;
+    width: 45%;
+    max-width: 600px;
+    height: 150px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+}
+
+.team-member img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 15px;
+    border: 4px solid #c59c89;
+}
+
+.info {
+    text-align: left;
+}
+
+.team-member h2 {
+    margin: 0;
+    font-size: 18px;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+}
+
+.team-member p {
+    margin: 5px 0 0;
+    font-size: 14px;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+}
+
+.member-1 {
+    background: url(https://ae01.alicdn.com/kf/HTB1bobpKXXXXXbLaXXXq6xXFXXX8/Horizontal-Hot-Sale-Free-Shipping-leather-print-Art-fabric-Photo-Studio-Backdrops-PC-Painted-baby-Background.jpg_640x640.jpg);
+    background-size: cover;
+    transition: 0.3s;
+}
+
+.member-2 {
+    background: url(https://southlandrealtors.com/wp-content/uploads/iStock-11379962072.jpg);
+    background-size: cover;
+    transition: 0.3s;
+}
+
+.member-3 {
+    background: url(https://ae01.alicdn.com/kf/HTB1bobpKXXXXXbLaXXXq6xXFXXX8/Horizontal-Hot-Sale-Free-Shipping-leather-print-Art-fabric-Photo-Studio-Backdrops-PC-Painted-baby-Background.jpg_640x640.jpg);
+    background-size: cover;
+    transition: 0.3s;
+}
+
+.member-4 {
+    background: url(https://southlandrealtors.com/wp-content/uploads/iStock-11379962072.jpg);
+    background-size: cover;
+    transition: 0.3s;
+
+}
+
+.member-1:hover {
+    box-shadow: 3px 3px 5px rgb(134, 134, 134);
+}
+.member-2:hover {
+    box-shadow: 3px 3px 5px rgb(134, 134, 134);
+}
+.member-3:hover {
+    box-shadow: 3px 3px 5px rgb(134, 134, 134);
+}
+.member-4:hover {
+    box-shadow: 3px 3px 5px rgb(134, 134, 134);
+}
+
