--- a/css/characters.css
+++ b/css/characters.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png);
+    background: url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png) repeat fixed 100%;
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Poppins', sans-serif;
@@ -84,7 +84,7 @@ html {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     gap: 20px;
 }
 
