--- a/css/pov.css
+++ b/css/pov.css
@@ -6,9 +6,10 @@
 }
 
 body {
-    background-image: url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png);
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-image: url(https://i.ibb.co/CBBS0Ry/1.png), url(https://i.ibb.co/mHgxzjf/Story-Analysis-4.png);
+    background-size: contain, cover;
+    background-repeat: no-repeat, no-repeat;
+    background-position: top center, center;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -66,4 +67,24 @@ html {
 .navdiv a:hover {
     color: gray;
     transform: scale(1.1); 
+}
+
+
+/*PLOT*/
+h1 {
+
+    margin-top: 230px;
+    text-shadow: 1px 1px 3px rgb(71, 52, 40);
+    text-align: center;
+    color: rgb(246, 218, 108);
+    font-family: s;
+}
+
+pre {
+    margin-top: 20px;
+    font-size: 18px;
+    color: rgb(71, 52, 40);
+    font-family: s;
+    text-shadow: 1px 1px 3px rgb(228, 155, 19);
+    text-align: center;
 }
